# vulkanized

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
sample_games/anim_demo/: CMakeLists.txt  main.c
sample_games/cube_demo/: CMakeLists.txt  main.c
sample_games/shmup/: CMakeLists.txt  main.c
shaders/: bloom_blur.frag  bloom_composite.frag  bloom_extract.frag  fullscreen.vert  mesh3d.frag  mesh3d.vert  skinned3d.vert  text.frag  text.vert  triangle.frag  triangle.vert
src/audio/: audio.c  audio.h
src/core/: arena.c  arena.h  common.h  log.c  log.h
src/gameplay/: collision.c  collision.h  particles.c  particles.h
src/platform/: input.c  input.h  window.c  window.h
src/renderer/: anim_blend.c  anim_blend.h  anim_blend_space.c  anim_bone_mask.c  anim_graph.c  anim_graph.h  anim_graph_types.h  animation.c  animation.h  animation_types.h  bloom.c  bloom.h  model.c  model.h  primitives.c  primitives.h  renderer.c  renderer.h  renderer_types.h  skinned_model.c  skinned_model.h  stb_impl.c  text.c  text.h  vk_buffer.c  vk_buffer.h  vk_init.c  vk_init.h  vk_pipeline.c  vk_pipeline.h  vk_types.h
tools/: gen_sounds.c
